--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pygame = {version = "*", sys_platform = "!= 'win32'"}
-pygame_win32 = {path = "./pygame-2.1.2-cp311-cp311-win_amd64.whl", sys_platform = "== 'win32'"}
+pygame = {version = "2.1.2", sys_platform = "!= 'win32'"}
+pygame_win32 = {path = "./pygame-2.1.2-cp310-cp310-win_amd64.whl", sys_platform = "== 'win32'"}
 
 [dev-packages]
 
 [requires]
-python_version = "3.11"
+python_version = "3.10"
