PyInstaller is now part of requirements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,9 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.11,<3.13"
 pygame = "^2.5.2"
+pyinstaller = "^6.3.0"
 
 
 [build-system]
